[workspace]
members = []

[lib]
crate-type = ['cdylib']

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-node-template-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-node-template-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['substrate-node-template-runtime/std']
